// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders and handle click 1`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="DATA-TEST-ID"
      tabindex="0"
      type="submit"
    >
      <div
        class="icon"
      >
        <i
          class="icon"
          icon="fal,paper-plane"
        />
      </div>
      <div
        class="label"
      >
        LABEL
      </div>
    </button>
  </div>
</body>
`;

exports[`Button Component renders when loading 1`] = `
<body>
  <div>
    <button
      class="button"
      color="primary"
      data-testid="DATA-TEST-ID"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <div
        class="icon"
      >
        <svg
          aria-hidden="true"
          class="icon size-lg"
          focusable="false"
          height="50"
          icon="fal,spinner"
          preserveAspectRatio="xMidYMid"
          role="img"
          style="background: transparent;"
          viewBox="0 0 100 100"
          width="50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="50"
            cy="50"
            fill="transparent"
            r="30"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="10"
          >
            <animatetransform
              attributeName="transform"
              dur="2s"
              keyTimes="0;0.5;1"
              repeatCount="indefinite"
              type="rotate"
              values="0 50 50;180 50 50;720 50 50"
            />
            <animate
              attributeName="stroke-dasharray"
              dur="2s"
              keyTimes="0;0.5;1"
              repeatCount="indefinite"
              values="20 150; 150 20; 20 150"
            />
          </circle>
        </svg>
      </div>
      <div
        class="label"
      >
        LABEL
      </div>
    </button>
  </div>
</body>
`;

exports[`Button Component renders with list and handle open menu and click on item 1`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Menu button
      </div>
      <div
        class="menuControl"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
        <i
          class="icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: -9999px; top: -9999px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON1"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON2"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with list and handle open menu and click on item 2`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Menu button
      </div>
      <div
        class="menuControl"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
        <i
          class="icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON1"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON2"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with list and handle open menu and click on item 3`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Menu button
      </div>
      <div
        class="menuControl"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
        <i
          class="icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px; display: none;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON1"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            data-testid="BUTTON2"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with list and handle open menu and close on click outside 1`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Menu button
      </div>
      <div
        class="menuControl"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
        <i
          class="icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: -9999px; top: -9999px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with list and handle open menu and close on click outside 2`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Menu button
      </div>
      <div
        class="menuControl"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
        <i
          class="icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with list and handle open menu and close on click outside 3`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Menu button
      </div>
      <div
        class="menuControl"
      >
        <i
          class="icon"
          icon="fal,pipe"
        />
        <i
          class="icon"
          icon="fas,caret-down"
        />
      </div>
    </button>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 1
          </li>
          <li
            class="szh-menu__divider"
            role="separator"
          />
          <li
            class="szh-menu__item"
            role="menuitem"
            tabindex="-1"
          >
            Label 2
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with popover 1`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="popover-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: -9999px; top: -9999px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            aria-hidden="true"
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            role="menuitem"
            style="display: block; position: absolute;"
          />
          <div
            class="container"
          >
            <div
              class="title"
            >
              POPOVER
            </div>
            <div
              class="buttons"
            >
              <button
                class="button"
                color="primary"
                data-testid="BUTTON1"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,paper-plane"
                  />
                </div>
                <div
                  class="label"
                >
                  Button 1
                </div>
              </button>
              <button
                class="button"
                color="secondary"
                data-testid="BUTTON2"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  Button 2
                </div>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with popover 2`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="popover-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            aria-hidden="true"
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            role="menuitem"
            style="display: block; position: absolute; left: 0px;"
          />
          <div
            class="container"
          >
            <div
              class="title"
            >
              POPOVER
            </div>
            <div
              class="buttons"
            >
              <button
                class="button"
                color="primary"
                data-testid="BUTTON1"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,paper-plane"
                  />
                </div>
                <div
                  class="label"
                >
                  Button 1
                </div>
              </button>
              <button
                class="button"
                color="secondary"
                data-testid="BUTTON2"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  Button 2
                </div>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with popover 3`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="popover-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px; display: none;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            aria-hidden="true"
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            role="menuitem"
            style="display: block; position: absolute; left: 0px;"
          />
          <div
            class="container"
          >
            <div
              class="title"
            >
              POPOVER
            </div>
            <div
              class="buttons"
            >
              <button
                class="button"
                color="primary"
                data-testid="BUTTON1"
                tabindex="0"
                type="button"
              >
                <div
                  class="icon"
                >
                  <i
                    class="icon"
                    icon="fal,paper-plane"
                  />
                </div>
                <div
                  class="label"
                >
                  Button 1
                </div>
              </button>
              <button
                class="button"
                color="secondary"
                data-testid="BUTTON2"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  Button 2
                </div>
              </button>
            </div>
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with popover without buttons 1`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="popover-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; display: none; position: absolute; left: -9999px; top: -9999px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            aria-hidden="true"
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            role="menuitem"
            style="display: block; position: absolute;"
          />
          <div
            class="container"
          >
            <div
              class="title"
            >
              POPOVER
            </div>
            <div
              class="buttons"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with popover without buttons 2`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="popover-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            aria-hidden="true"
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            role="menuitem"
            style="display: block; position: absolute; left: 0px;"
          />
          <div
            class="container"
          >
            <div
              class="title"
            >
              POPOVER
            </div>
            <div
              class="buttons"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with popover without buttons 3`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      data-testid="MAIN-BUTTON"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Tooltip button
      </div>
    </button>
  </div>
  <div
    id="popover-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: absolute;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-top"
          role="menu"
          style="margin: 0px; position: absolute; left: 0px; top: 0px; display: none;"
          tabindex="-1"
        >
          <li
            aria-hidden="true"
            role="menuitem"
            style="position: absolute; left: 0px; top: 0px; display: block; outline: none;"
            tabindex="-1"
          />
          <li
            aria-hidden="true"
            class="szh-menu__arrow szh-menu__arrow--dir-top"
            role="menuitem"
            style="display: block; position: absolute; left: 0px;"
          />
          <div
            class="container"
          >
            <div
              class="title"
            >
              POPOVER
            </div>
            <div
              class="buttons"
            />
          </div>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Button Component renders with tooltip 1`] = `
<body>
  <div>
    <button
      class="button"
      color="secondary"
      tabindex="0"
      type="button"
    >
      <div
        class="label"
      >
        Tooltip button
      </div>
    </button>
  </div>
</body>
`;

exports[`Button Component renders without label and icon 1`] = `
<body>
  <div />
</body>
`;
